--- a/messenger/comms/templates/comms/layout.html
+++ b/messenger/comms/templates/comms/layout.html
@@ -25,7 +25,7 @@
                         <i class="fas fa-cog"></i> <!-- Settings icon -->
                     </button>
                     <button id="left-bottom-pic" class="iconstuff" style=" cursor:pointer; font-size: 1.5rem;" data-state="profile" v>
-                        <img id="left-profile-preview" src="{{ profile_pic|default:'/static/comms/images/default-profile.png' }}" alt="Profile Preview" style="width:30px; height:30px; border-radius:50%; object-fit:cover; cursor:pointer;" />
+                        <img id="left-profile-preview" src="{{ profile_pic|default:'https://media.tenor.com/t3dLLNaI50oAAAAM/cat-cats.gif' }}" alt="Profile Preview" style="width:30px; height:30px; border-radius:50%; object-fit:cover; cursor:pointer;" />
                     </button>
                 </div>
             </div>
