--- a/comms/static/comms/styles.css
+++ b/comms/static/comms/styles.css
@@ -53,6 +53,7 @@ body {
     background: #F4F1EB;
     height: 100%;
     border-left: 1px solid #cccac8;
+    display: flex;
 }
 
 .lefttop {
@@ -733,6 +734,7 @@ overflow-y:auto;
 }
 
 #start-screen {
+    flex:1;
     height: 100%;
 }
 
@@ -1035,6 +1037,27 @@ color:#B80631;
   background-color: rgba(0, 0, 0, 0.1); /* Subtle darken on hover */
 }
 
+#right-close-button {
+  width: 40px;
+  height: 40px;
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s ease;
+}
+
+#right-close-button:hover {
+  background-color: #F7F5F3; /* subtle dark hover */
+}
+#right-close-button:focus {
+  outline: none;
+  box-shadow: none;
+}
 
 
 #chat-search-results {
@@ -1159,7 +1182,7 @@ color:#B80631;
 }
 
 ul {
-  list-style: none;    
+  list-style: none;
   margin: 0;
   padding: 0;
 }
@@ -1170,4 +1193,39 @@ ul {
     padding: 28px 16px;
     color: #666666;
     margin-top: 5px;
+}
+
+.app-view{
+    flex:1
+}
+
+.right-right {
+will-change: width, opacity;
+  background: white;
+  width: 0;
+  overflow: hidden;
+  transition: width 0.3s ease, opacity 0.3s ease;
+  opacity: 0;
+}
+
+.right-right.slide-in {
+  width: 440px;
+  opacity: 1;
+}
+/* Mobile overrides */
+@media (max-width: 768px) {
+  .right-right.slide-in {
+    width: 100%;     /* full width on mobile */
+    height:100%;
+  }
+}
+
+
+.view-chat-profile{
+    display: flex;
+    flex-direction: column;
+}
+
+#view-archive{
+    height: 100%;
 }
