--- a/comms/static/comms/styles.css
+++ b/comms/static/comms/styles.css
@@ -1217,10 +1217,10 @@ ul {
 @media (max-width: 768px) {
   .right-right.slide-in {
     width: 100%;
-    height: 100%;
+    height: 100% !important;
   }
     .right-right {
-    height:0%;
+    height:0% !important;
   }
 }
 
