--- a/comms/templates/comms/layout.html
+++ b/comms/templates/comms/layout.html
@@ -118,7 +118,7 @@
 
                                     </div>
                                 {% empty %}
-                                    no unread chats
+                                    <div style="padding: 8px; color: #888;">No unread chats</div>
                                 {% endfor %}
                             </div>
 
